--- a/PRS_EA.html
+++ b/PRS_EA.html
@@ -9,6 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
+<meta name="author" content="Sebastian Marten &amp; Amaury Pelzer" />
 
 
 <title>PRS_EA</title>
@@ -349,45 +350,11 @@ display: none;
 
 
 <h1 class="title toc-ignore">PRS_EA</h1>
+<h4 class="author">Sebastian Marten &amp; Amaury Pelzer</h4>
 
 </div>
 
 
-<div id="libraries" class="section level1">
-<h1>Libraries</h1>
-<pre class="r"><code>if (suppressWarnings(!require(tidyverse))) {install.packages(&quot;tidyverse&quot;); library(tidyverse)}</code></pre>
-<pre><code>## Loading required package: tidyverse</code></pre>
-<pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
-## ✔ dplyr     1.1.2     ✔ readr     2.1.4
-## ✔ forcats   1.0.0     ✔ stringr   1.5.0
-## ✔ ggplot2   3.4.2     ✔ tibble    3.2.1
-## ✔ lubridate 1.9.2     ✔ tidyr     1.3.0
-## ✔ purrr     1.0.1     
-## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()
-## ℹ Use the conflicted package (&lt;http://conflicted.r-lib.org/&gt;) to force all conflicts to become errors</code></pre>
-<pre class="r"><code>if (suppressWarnings(!require(ggplot2))) {install.packages(&quot;ggplot2&quot;); library(ggplot2)}
-if (suppressWarnings(!require(data.table))) {install.packages(&quot;data.table&quot;); library(data.table)}</code></pre>
-<pre><code>## Loading required package: data.table
-## 
-## Attaching package: &#39;data.table&#39;
-## 
-## The following objects are masked from &#39;package:lubridate&#39;:
-## 
-##     hour, isoweek, mday, minute, month, quarter, second, wday, week,
-##     yday, year
-## 
-## The following objects are masked from &#39;package:dplyr&#39;:
-## 
-##     between, first, last
-## 
-## The following object is masked from &#39;package:purrr&#39;:
-## 
-##     transpose</code></pre>
-<pre class="r"><code>if (suppressWarnings(!require(formattable))) {install.packages(&quot;formattable&quot;); library(formattable)}</code></pre>
-<pre><code>## Loading required package: formattable</code></pre>
-</div>
 <div id="test-of-time-dependency" class="section level1">
 <h1>Test of Time dependency</h1>
 <p>Variables that are not required for the analysis:
